#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------------------------------------------

Package author: Mikhail S. Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-02-58
2015-12-16 Mikhail S. Dubrovin
- GeometryAccess.py - change dictionary of comments key to integer index (to order comments)
- GeometryObject.py - change format for output geo string

Tag: V00-02-57
2015-12-07 Mikhail S. Dubrovin
- CalibParsStore.py - add calibration support for Timepix, Fli, Pimax (PSAS-139)
- GeometryObject.py - add get_origin, get_rot, get_tilt methods
- GeometryAccess.py, GeometryObject.py - update sphinx documentation
	
Tag: V00-02-56
2015-12-04 Mikhail S. Dubrovin
- GlobalUtils.py - add support for Fccd, Timepix, Fli, Pimax (PSAS-139)
- CalibParsStore.py - add support for Fccd
  -- TODO: Timepix, Fli, Pimax
	
Tag: V00-02-55
2015-11-09 TJ Lane
- Added explicit list of BldInfo names to GlobalUtils.py

Tag: V00-02-54
2015-10-14 Mikhail S. Dubrovin
- Fix crash if detector source is missing in data (PSAS-139)
   - CalibParsStore.py - method Create now returns object even if the detector source is missing.
   - GenericCalibPars.py - sets self.cbase = None if detector source is missing. Returns None for missing constants.	

Tag: V00-02-53
2015-10-14 Mikhail S. Dubrovin
- Add support for Rayonix (PSAS-139)

Tag: V00-02-52
2015-10-06 Mikhail S. Dubrovin
- Add support for Quartz4A150 (PSAS-139)
  GlobalUtils.py - add Quartz4A150 detector
  CalibParsStore.py - add QUARTZ4A150 as CalibParsBaseCameraV1()
	
Tag: V00-02-51
2015-09-18 Mikhail S. Dubrovin
- add CalibParsBaseImpV1.py, add Imp in GlobalUtils.py and CalibParsStore.py (PSAS-139)

Tag: V00-02-50
2015-09-11 Mikhail S. Dubrovin
- GeometryAccess.py - define self.valid before self.load_pars_from_file().
	
Tag: V00-02-49